# sensei-sdk

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .style.yapf  .yamllint  .yapfignore  Install.md  Makefile  README.md  REUSE.toml  Readme.md  sensei-sdk.code-workspace  west.yml
.github/workflows/: pre-commit.yml
GAP9/: CMakeLists.txt
GAP9/bsp/boards/: bsp_sensei_basev1.c  bsp_sensei_basev1.h  bsp_sensei_debugv1.c  bsp_sensei_debugv1.h  bsp_sensei_sensorv1.c  bsp_sensei_sensorv1.h
GAP9/devicetree/: sensei_basev1.dts  sensei_debugv1.dts  sensei_sensorv1.dts
GAP9/kconfig/: board.kconfig  drivers.kconfig
NRF/: CMakeLists.txt  Kconfig
NRF/boards/arm/nrf5340_senseiv1/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf5340_cpunet_reset.c  nrf5340_senseiv1_cpuapp.dts  nrf5340_senseiv1_cpuapp.yaml  nrf5340_senseiv1_cpuapp_bootloader.dts  nrf5340_senseiv1_cpuapp_bootloader.yaml  nrf5340_senseiv1_cpuapp_bootloader_defconfig  nrf5340_senseiv1_cpuapp_defconfig  nrf5340_senseiv1_cpunet.dts  nrf5340_senseiv1_cpunet.yaml  nrf5340_senseiv1_cpunet_defconfig  nrf5340_senseiv1_shared.dtsi  pre_dt_board.cmake
NRF/boards/shields/SENSEI_DebugBoard/: Kconfig.shield  SENSEI_DebugBoard_v1.defconfig  SENSEI_DebugBoard_v1.overlay
NRF/boards/shields/SENSEI_ExGShield/: Kconfig.shield  SENSEI_ExGShield.overlay
NRF/boards/shields/SENSEI_PPGShield/: Kconfig.shield  SENSEI_PPGShield.defconfig  SENSEI_PPGShield.overlay
NRF/boards/shields/UT_SensorShield/: Kconfig.shield  UT_SensorShield_v1.defconfig  UT_SensorShield_v1.overlay
NRF/drivers/: CMakeLists.txt  Kconfig
NRF/drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.pca64xxa  gpio_pca64xxa.c
NRF/drivers/led/: CMakeLists.txt  Kconfig  is31fl3194.c
NRF/dts/bindings/ads1298/: ti,ads1298_a.yaml
NRF/dts/bindings/gpio/: nxp,pca6416a.yaml
NRF/dts/bindings/led/: issi,is31fl3194.yaml
NRF/overlays/: debug_rtt.conf  disassemble.conf  usb_log.overlay
NRF/system/: CMakeLists.txt  Kconfig
NRF/system/bsp/: CMakeLists.txt  pmic_bsp.c  pmic_bsp.h
NRF/system/config/: pmic_default.h  tasks.h
NRF/system/pwr/: CMakeLists.txt  pwr.c  pwr.h  pwr_common.h  thread_pwr.c  thread_pwr.h
NRF/zephyr/: module.yml
example/ble_bootloader/: Readme.md
example/ble_bootloader/src_NRF/: CMakeLists.txt  bluetooth.c  common.h  main.c  prj.conf
example/ble_bootloader/src_NRF/child_image/: b0n.conf  mcuboot.conf
example/camera_test/src_GAP9/: CMakeLists.txt  ISPKernels.c  ISPKernels.h  Kconfig  README.md  sdk.config  test.c
example/camera_test/src_NRF/: CMakeLists.txt  main.c  pm_static.yml  prj.conf
example/camera_test/src_NRF/bsp/: pwr_bsp.c
example/debug_test/: Readme.md
example/debug_test/src_GAP9/: main.c
example/debug_test/src_NRF/: CMakeLists.txt  CMakePresets.json  main.c  prj.conf
example/debug_test/src_NRF/bsp/: pwr_bsp.c
example/debug_test/src_NRF/child_image/: mcuboot.conf
example/exg_stream/src_GAP9/: CMakeLists.txt
example/exg_stream/src_NRF/: CMakeLists.txt  Kconfig  ads_appl.c  ads_appl.h  ads_defs.h  ads_spi.c  ads_spi.h  ble_appl.c  ble_appl.h  bluetooth.c  bluetooth.h  board_streaming.c  common.h  i2c_helpers.c  imu_appl.c  imu_appl.h  lis2duxs12_reg.c  lis2duxs12_reg.h  lis2duxs12_sensor.c  lis2duxs12_sensor.h  main.c  mic_appl.c  mic_appl.h  nrf5340_senseiv1_cpuapp.overlay  ppg_appl.c  ppg_appl.h  prj.conf  state_machine.c  state_machine.h  sync_streaming.c  sync_streaming.h
example/exg_stream/src_NRF/afe/: ads_appl.c  ads_appl.h  ads_defs.h  ads_spi.c  ads_spi.h  ads_spi_comm.c  ads_spi_comm.h  ads_spi_config.c  ads_spi_data.c  ads_spi_data.h  ads_spi_hw.c  ads_spi_hw.h
example/exg_stream/src_NRF/ble/: ble_appl.c  ble_appl.h  ble_commands.h  bluetooth.c  bluetooth.h
example/exg_stream/src_NRF/bsp/: pwr_bsp.c  pwr_bsp.h
example/exg_stream/src_NRF/bsp/battery/: battery.c  battery.h
example/exg_stream/src_NRF/bsp/power/: power.c  power.h
example/exg_stream/src_NRF/bsp/system_status/: system_status.c  system_status.h
example/exg_stream/src_NRF/child_image/: mcuboot.conf
example/exg_stream/src_NRF/core/: board_streaming.c  board_streaming.h  board_sync.c  board_sync.h  common.h  i2c_helpers.c  state_machine.c  sync_streaming.c  sync_streaming.h
example/exg_stream/src_NRF/core/deprecated/: board_streaming.c
example/exg_stream/src_NRF/sensors/eeg/: eeg_appl.c  eeg_appl.h
example/exg_stream/src_NRF/sensors/emg/: emg_appl.c  emg_appl.h
example/exg_stream/src_NRF/sensors/imu/: imu_appl.c  lis2duxs12_sensor.c  lis2duxs12_sensor.h
example/exg_stream/src_NRF/sensors/mic/: mic_appl.c  mic_appl.h
example/exg_stream/src_NRF/sensors/ppg/: ppg_appl.c
example/led_test/: Readme.md
example/led_test/src_GAP9/: main.c
example/led_test/src_NRF/: CMakeLists.txt  ads_appl.c  ble_appl.h  bluetooth.c  board_streaming.c  lis2duxs12_sensor.c  main.c  prj.conf
example/led_test/src_NRF/bsp/: pwr_bsp.h
example/led_test/src_NRF/child_image/: hci_ipc.conf  mcuboot.conf
example/mic_test/src_GAP9/: sdk.config
example/mic_test/src_NRF/: CMakeLists.txt  main.c  nrf5340_senseiv1_cpuapp.overlay  prj.conf
example/pmic_test/: Readme.md
example/pmic_test/src_GAP9/: main.c
example/pmic_test/src_NRF/: CMakeLists.txt  main.c
example/pmic_test/src_NRF/bsp/: pwr_bsp.c
example/sensorShield_bme688/src_GAP9/: CMakeLists.txt  Makefile  main.c
example/sensorShield_bme688/src_NRF/: CMakeLists.txt  bluetooth.c  common.h  main.c  prj.conf
example/sensorShield_bme688/src_NRF/bsp/: pwr_bsp.c
example/sensorShield_scan/: Readme.md
example/sensorShield_scan/src_GAP9/: CMakeLists.txt
example/sensorShield_scan/src_NRF/: CMakeLists.txt  i2c_helpers.c  i2c_helpers.h  main.c  prj.conf
example/uart_communication/: Readme.md
example/uart_communication/src_GAP9/: CMakeLists.txt  main.c  sdk.config
example/uart_communication/src_NRF/: CMakeLists.txt  main.c  prj.conf
example/uart_communication/src_NRF/bsp/: pwr_bsp.c  (+1 more)
scripts/: count_packets.py  full_process.py  get_battery_ble.py  read_jlink.py  read_uart.py  verify_sps.py
(+3 files in other folders)
